route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"bikesafe-backend"}]'
    openshift.io/host.generated: "true"
  creationTimestamp: "2024-10-07T09:25:04Z"
  labels:
    app: bikesafe-frontt
    app.kubernetes.io/component: bikesafe-frontt
    app.kubernetes.io/instance: bikesafe-frontt
    app.kubernetes.io/name: bikesafe-frontt
    app.kubernetes.io/part-of: Bikesafe
    type: external
  name: bikesafe-frontt
  namespace: ohtuprojekti-staging
  resourceVersion: "1455963405"
  uid: a509eb81-fc1d-4560-84f3-98e4ea6223e0
spec:
  host: bikesafe-frontt-ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: bikesafe-frontt
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2024-10-07T09:25:04Z"
      status: "True"
      type: Admitted
    host: bikesafe-frontt-ohtuprojekti-staging.apps.ocp-test-0.k8s.it.helsinki.fi
    routerCanonicalHostname: router-default.apps.ocp-test-0.k8s.it.helsinki.fi
    routerName: default
    wildcardPolicy: None
  - conditions:
    - lastTransitionTime: "2024-10-07T09:27:11Z"
      status: "True"
      type: Admitted
    host: bikesafe-frontt-ohtuprojekti-staging.apps.ocp-test-0.k8s.it.helsinki.fi
    routerCanonicalHostname: router-external.ext.ocp-test-0.k8s.it.helsinki.fi
    routerName: external
    wildcardPolicy: None
